fix(showcase): fix table aligning in showcase example

--- a/projects/angular-showcase/src/styles.scss
+++ b/projects/angular-showcase/src/styles.scss
@@ -34,6 +34,7 @@ sbb-icons,
     @include sbbSelect();
     @include sbbFieldset();
     @include sbbTimeInputField();
+    @include sbbTable();
   }
 }
 
